# stock_correlator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: code_quality  code_quality.yml  docker_build  docker_build.yml  service_deployment.yml
data/00_asset/: yf_main.txt  yf_symbols.txt
src/: __init__.py  lib.py  logger.py  utils.py
src/correlator/: __init__.py
src/processing/: __init__.py  stock_correlation.py  test_stock_correlation.py
src/ui/: actions.py  app.py  components.py  graphs.py
