[project]
name = "src"
version = "0.1.0"
description = "Stock correlation app"
readme = "README.md"
authors = [{ name = "Cyril Verluise" }]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.11",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "vizro==0.1.30",
    "yfinance>=0.2.54",
]

# [project.scripts]
# correlator = "correlator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.8",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff==0.11.0",
]
